Implement database functionality with mongodb

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google-cloud/translate": "^2.1.2",
     "express": "^4.16.4",
     "hbs": "^4.0.1",
-    "iso-639-1": "^2.0.3"
+    "iso-639-1": "^2.0.3",
+    "mongoose": "^5.3.12"
   }
 }
